This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

07-Jan-2003 (Lars Duening)  (3.3.353)
  - (prolang.y) Corrected another error in non-__INIT initializations
       (thanks, Guandalug).
  - (prolang.y) Corrected another refcount error in the struct code
       (reported by Bardioc).

06-Jan-2003 (Lars Duening)  (3.3.352)
  - (prolang.y) Removed compiler warnings.
  - (prolang.y, simulate.c) Removed compiler errors when not using __INIT
       (reported by Guandalug).
  - (mudlib/sys/wizlist.h) The wizlist_info() result array was allocated
       too small (reported by Dafire).

06-Jan-2003 (Lars Duening)  (3.3.351)
  - (ptmalloc.c) Using driver.h instead of config.h leads to compilation
       errors on some systems (reported by Gawain).
  - (smalloc.c, configuration) New configuration option --enable-malloc-check
       to enable simple malloc checks like the magic words in smalloc (enabled
       by default). The overhead for this is small, but especially in 
       a development driver this can catch many memory mis-uses.

05-Jan-2003 (Lars Duening)  (3.3.350)
  - (prolang.y) Corrected another struct related refcount error: function
       return types were freed twice (reported by Dafire).
  - (structs.c) Changed a call to struct_free() to free_struct() as the
       refcount needs to be adjusted properly.
  - (swap.c) When freeing an empty swapped-out struct, the refcount needed to
       be adjusted before calling struct_free_empty() (reported by Bardioc).
  - (make_func.y) When creating type/hookmaps in prolang.y, the linecounting
       didn't count the map's continuation lines.

04-Jan-2003 (Lars Duening)  (3.3.349)
  - (interpret.c) Many mudlibs index strings happily one past the
       end, which when used with assignments might lead to
       data structure corruption. Since this faulty idiom is in wide