@@ -36,13 +36,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 353)
-(Parent-Version lpmud 3-3 352)
-(Version-Log "Corrected another error in non-__INIT initializations.
-Corrected another refcount error in the struct code.")
+(Project-Version lpmud 3-3 354)
+(Parent-Version lpmud 3-3 353)
+(Version-Log "Removed the no-blueprint configuration option.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 07 Jan 2003 19:37:09 -0700")
+(Checkin-Time "Tue, 07 Jan 2003 19:57:41 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -79,24 +78,24 @@ Corrected another refcount error in the struct code.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.56 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.416 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.417 644))
   (HISTORY (lpmud/f/49_HISTORY 1.294 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.67 755))
-  (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.23 644))
+  (src/configure (lpmud/d/0_configure 1.19.1.68 755))
+  (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.24 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.4 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.7 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.57 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.58 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.4 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.13 644))
-  (src/settings/default (lpmud/c/23_default 1.13.1.5.1.31 744))
+  (src/settings/default (lpmud/c/23_default 1.13.1.5.1.32 744))
   (src/settings/native (lpmud/c/9_native 1.6 744))
   (src/settings/compat (lpmud/c/10_compat 1.7 744))
   (src/settings/alatia (lpmud/j/27_alatia 1.5 744))
@@ -115,7 +114,7 @@ Corrected another refcount error in the struct code.")
   (src/settings/heaven7 (lpmud/k/22_heaven7 1.4 644))
   (src/settings/hyperborea (lpmud/h/20_hyperborea 1.3 744))
   (src/settings/morgengrauen (lpmud/k/37_morgengrau 1.6 644))
-  (src/settings/osb (lpmud/c/8_osb 1.15 744))
+  (src/settings/osb (lpmud/c/8_osb 1.16 744))
   (src/settings/pkmud (lpmud/c/25_pkmud 1.5.1.4 744))
   (src/settings/psycmuve (lpmud/i/42_psycmuve 1.1.1.5 744))
   (src/settings/quovadis (lpmud/h/12_quovadis 1.1.1.6 744))
@@ -138,7 +137,7 @@ Corrected another refcount error in the struct code.")
   (src/array.h (lpmud/f/47_array.h 1.18.1.21 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.2 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.22 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.23 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.13 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.1 644))
@@ -154,24 +153,24 @@ Corrected another refcount error in the struct code.")
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.27 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.1 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.59 644))
-  (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.2 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.60 644))
+  (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.3 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.19 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.13 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.88 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.89 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.8 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.11 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.12 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.2 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.41 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.31 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.32 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.55 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
@@ -185,7 +184,7 @@ Corrected another refcount error in the struct code.")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.1 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.11 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.12 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -239,10 +238,10 @@ Corrected another refcount error in the struct code.")
   (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.3 644))
   (src/pkg-pcre.h (lpmud/a/b/7_pkg-pcre.h 1.1 644))
   (src/pkg-pcre.c (lpmud/q/48_pcre-pcre. 1.5 644))
-  (src/port.h (lpmud/38_port.h 1.30.1.4.1.15 644))
+  (src/port.h (lpmud/38_port.h 1.30.1.4.1.16 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.1 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.17 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.18 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -253,7 +252,7 @@ Corrected another refcount error in the struct code.")
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.2 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.95 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.96 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.12 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.63 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.2 644))
@@ -294,7 +293,7 @@ Corrected another refcount error in the struct code.")
   (src/hosts/amiga/StartMUD (lpmud/l/42_StartMUD 1.1 644))
   (src/hosts/amiga/README.Amiga.info (lpmud/l/43_README.Ami 1.1 644) :no-keywords)
   (src/hosts/amiga/machine.h (lpmud/c/2_machine.h 1.6.1.3 644))
-  (src/hosts/amiga/config.h (lpmud/c/7_config.h 1.23.1.29 644))
+  (src/hosts/amiga/config.h (lpmud/c/7_config.h 1.23.1.30 644))
   (src/hosts/amiga/README.Amiga (lpmud/c/12_README.Ami 1.4 644))
   (src/hosts/amiga/README (lpmud/c/13_README 1.4 644))
 
@@ -302,7 +301,7 @@ Corrected another refcount error in the struct code.")
   (src/hosts/be/socketinc.h (lpmud/e/32_socketinc. 1.3 644))
   (src/hosts/be/set-version (lpmud/c/b/10_set-versio 1.1 744))
   (src/hosts/be/machine.h (lpmud/e/33_machine.h 1.14.1.4 644))
-  (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.31 644))
+  (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.32 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
   (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.7 644))
@@ -323,7 +322,7 @@ Corrected another refcount error in the struct code.")
   ;; Host: Win32
   (src/hosts/win32/tubmud.bmp (lpmud/g/20_tubmud.bmp 1.1 644) :no-keywords)
   (src/hosts/win32/machine.h (lpmud/g/21_machine.h 1.4.1.2 644))
-  (src/hosts/win32/config.h (lpmud/g/22_config.h 1.18.1.27 644))
+  (src/hosts/win32/config.h (lpmud/g/22_config.h 1.18.1.28 644))
   (src/hosts/win32/Readme.rtf (lpmud/g/23_Readme.rtf 1.2.1.1 644))
   (src/hosts/win32/Makefile (lpmud/g/24_Makefile 1.10.1.18.1.3 644))
 
