@@ -137,7 +137,6 @@ AC_MY_ARG_ENABLE(check-object-stat,no,,[trace changes to the object statistics])
 AC_MY_ARG_ENABLE(check-mapping-total,no,,[check the mapping statistic])
 AC_MY_ARG_ENABLE(check-object-ref,no,,[check object references])
 AC_MY_ARG_ENABLE(check-object-gc-ref,yes,,[check object references in GC])
-AC_MY_ARG_ENABLE(no-blueprint,no,,[disable blueprint tracking])
 AC_MY_ARG_ENABLE(check-smalloc-total,no,,[trace smalloc statistics])
 AC_MY_ARG_ENABLE(dump-gc-refs,no,,[trace GC references])
 
@@ -285,7 +284,6 @@ AC_CDEF_FROM_ENABLE(check_object_stat)
 AC_CDEF_FROM_ENABLE(check_mapping_total)
 AC_CDEF_FROM_ENABLE(check_object_ref)
 AC_CDEF_FROM_ENABLE(check_object_gc_ref)
-AC_CDEF_FROM_ENABLE(no_blueprint)
 AC_CDEF_FROM_ENABLE(check_smalloc_total)
 AC_CDEF_FROM_ENABLE(dump_gc_refs)
 
@@ -1870,7 +1868,6 @@ AC_SUBST(cdef_check_object_stat)
 AC_SUBST(cdef_check_mapping_total)
 AC_SUBST(cdef_check_object_ref)
 AC_SUBST(cdef_check_object_gc_ref)
-AC_SUBST(cdef_no_blueprint)
 AC_SUBST(cdef_check_smalloc_total)
 AC_SUBST(cdef_dump_gc_refs)
 
