@@ -18777,12 +18777,10 @@ count_inherits (program_t *progp)
             continue;
         }
         progp2->extra_ref = 1;
-#ifndef NO_BLUEPRINT
         if (progp2->blueprint)
         {
             count_extra_ref_in_object(progp2->blueprint);
         }
-#endif /* !NO_BLUEPRINT */
         count_inherits(progp2);
     }
 } /* count_inherits() */
@@ -18861,12 +18859,10 @@ count_extra_ref_in_object (object_t *ob)
         if (NULL != register_pointer(ptable, ob->prog))
         {
             ob->prog->extra_ref = 1;
-#ifndef NO_BLUEPRINT
             if (ob->prog->blueprint)
             {
                 count_extra_ref_in_object(ob->prog->blueprint);
             }
-#endif /* !NO_BLUEPRINT */
             count_inherits(ob->prog);
         }
     }
