@@ -28,6 +28,7 @@ enable_initialization_by___init=yes
 enable_use_system_crypt=no
 enable_malloc_trace=yes
 enable_malloc_lpc_trace=yes
+enable_check_smalloc_total=yes
 
 enable_use_mysql=/usr/local/lib/mysql
 enable_use_pcre=yes
